# bline

./: configure  configure.ac
src/: Makefile.am  Makefile.in  bline-filter-simple.c  bline-filter-simple.h  bline-filter.c  bline-filter.h  bline-image.c  bline-image.h  bline-operation-sobel.c  bline-operation-sobel.h  bline-simple-filter.c  bline-simple-filter.h  bline.glade  main.c
src/gegl-operations/: Makefile-operations.am  Makefile.am  bline-operation-edge-detect.c  bline-operation-edge-detect.h  bline-operation-sobel.c  bline-operation-sobel.h  edge-detect.c
